modificque un poco codigo

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,6 @@
     <footer>
         <a href="https://github.com/matiashuangyue/Boogle-Game" target="_blank">Ver en GitHub</a>
     </footer>
-    <script src="script/contact.js"></script>
+    <script src="script/Contact.js"></script>
 </body>
 </html>
