Incorporando api para validar las palabras

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
             <div id="game-board" class="hidden">
                 <div id="timer"></div>
                 <div id="score">Puntaje: 0</div>
-                <div id="current-word"></div>
+                <div id="current-word-container">
+                    <div id="current-word"></div>
+                    <button id="delete-word">Eliminar</button>
+                    <button id="validate-word">Validar</button>
+                </div>
                 <div id="board"></div>
                 <button id="end-game">Terminar Juego</button>
                 <div id="word-list"></div>
