agregue algunas validaciones y detalles, ahora anda bienm

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Juego de Boggle</h1>
         <a href="https://github.com/matiashuangyue/Boogle-Game" target="_blank">Ver en GitHub</a>
+        <a href="/how-to-play.html" id="how-to-play-link">Cómo Jugar</a>
     </header>
     <main>
         <section id="game-section">
