--- a/how-to-play.html
+++ b/how-to-play.html
@@ -75,10 +75,15 @@
             </ul>
             <p>¡Con estas reglas y consejos, estarás listo para disfrutar del desafío de Boggle y mejorar tus habilidades lingüísticas mientras te diviertes!</p>
         </section>
+            
     </main>
-    <footer>
-        <a href="contact.html">Contacto</a>
-    </footer>
+        <footer>
+            <div class="contenedor-htp"> 
+                <div class="contact-htp"><a href="contact.html">Contacto</a></div> 
+                <div class="index-htp"><a href="index.html">Inicio</a></div>  
+              </div>
+        </footer>
+    
     <script src="script/Modal.js"></script>
     <script src="script/Game.js"></script>
 </body>
