--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <h1>Juego de Boggle</h1>
-        <a href="https://github.com/matiashuangyue/Boogle-Game" target="_blank">Ver en GitHub</a>
-        <a href="/how-to-play.html" id="how-to-play-link">Cómo Jugar</a>
+        <h1>Boggle</h1>
+        <a href="https://github.com/matiashuangyue/Boggle-Game" target="_blank">Ver en GitHub</a>
+        <a href="how-to-play.html" id="how-to-play-link">Cómo Jugar</a>
     </header>
     <main>
         <section id="game-section">
@@ -27,10 +27,12 @@
                     <div id="current-word"></div>
                     <button id="delete-word">Eliminar</button>
                     <button id="validate-word">Validar</button>
+                    <button id="shuffle-board">Mezclar Tablero</button> 
                 </div>
                 <div id="board"></div>
-                <button id="end-game">Terminar Juego</button>
                 <div id="word-list"></div>
+                <div id="message"></div> 
+                <button id="end-game">Terminar Juego</button>
             </div>
         </section>
         <section id="modal" class="hidden">
